# ViruLink

./: LICENSE  README.md  arguments.py  main.py  pyproject.toml  search_utils.py  setup.py
ViruLink/: README.md  arguments.py  default_yaml.py  main.py  prep_vogdb.py  results.csv  score_profile.py  search_utils.py  setup.py  utils.py  visualizations.py
ViruLink/ViruLink/: Produce_evo2_embs.py  prep_vogdb.py  search_utils.py
ViruLink/ViruLink/download/: download.py
ViruLink/ViruLink/process/: process.py
ViruLink/ViruLink/setup/: run_parameters.py
ViruLink/ViruLink/single_use_scripts/: make_class_db.py  prep_class_db.py
ViruLink/ViruLink/train/: n2v.py
ViruLink/ani/: ani_calc.cpp
ViruLink/classify/: classify.py
ViruLink/download/: download.py  vogdb.py
ViruLink/hypergeom/: hypergeom.cpp
ViruLink/process/: mmseqs_process.py  process.py
ViruLink/relations/: relationship_edges.cpp  relationship_edges.py
ViruLink/sampler/: triangle_sampler.cpp
ViruLink/setup/: databases.py  run_parameters.py  score_profile.py
ViruLink/single_use_scripts/: calc_accuracy.py  concat_by_assembly.py  filter_csv_by_fasta.py  merge_db_virulink.py  prep_class_db.sh  rem_version.py
ViruLink/test/: test.py  test_evo.py  test_simple.py  test_triangle.py
ViruLink/train/: OrdTri.py  draw.py  losses.py  train_utils.py
download/: databases.py  download.py
hypergeom/: hypergeom.cpp
random_walk/: biased_random_walk.cpp
single_use_scripts/: prep_class_db.sh
train/: get_answers.py  prep.py  taxonomy_net.py  trainer.py  tsne.py
